--- a/dbconfig.ini
+++ b/dbconfig.ini
@@ -1,7 +1,7 @@
 [db_connection]
 host = 10.161.100.11
 user = bct_write
-passwd = bcwriter22
+passwd = bct_write@
 db = better_call_test
 [fserver_connection]
 path = //10.161.100.18/chamados_engteste$/uploads
